# UFO-Exam

./: .gitignore  Data.ipynb
CSharpOptimizer/: Program.cs
CSharpResults/: L 1.csv  L 2.csv  L 3.csv  L 4.csv  L 5.csv  M 1.csv  M 2.csv  M 3.csv  M 4.csv  M 5.csv  S 1.csv  S 2.csv  S 3.csv  S 4.csv  S 5.csv
CppOptimizer/: CMakeLists.txt  MathC.cpp  MathC.h  NavMeshImport.cpp  NavMeshImport.h  NavMeshOptimized.cpp  NavMeshOptimized.h  NavMeshTriangle.cpp  NavMeshTriangle.h  OptimizedResult.cpp  OptimizedResult.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  main.cpp
CppOptimizer/ConsoleApplication/ConsoleApplication/: ConsoleApplication.cpp  ConsoleApplication.vcxproj  MathC.cpp  MathC.h  NavMeshImport.cpp  NavMeshImport.h  NavMeshOptimized.cpp  NavMeshOptimized.h  NavMeshTriangle.cpp  NavMeshTriangle.h
CppOptimizer/ConsoleApplication/ConsoleApplication/x64/Debug/: ConsoleApplication.exe.recipe  vc143.idb
CppOptimizer/ConsoleApplication/ConsoleApplication/x64/Debug/ConsoleA.C6C891C5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication.lastbuildstate
CppResults/: L 1.csv  L 2.csv  L 3.csv  L 4.csv  L 5.csv  M 1.csv  M 2.csv  M 3.csv  M 4.csv  M 5.csv  S 1.csv  S 2.csv  S 3.csv  S 4.csv  S 5.csv
DataAnalysis/: DataAnalysis.ipynb
JsonFiles/: L 1.txt  L 2.json  L 2.txt  L 3.json  L 3.txt  L 4.json  L 4.txt  L 5.txt  M 1.txt  M 2.txt  M 3.json  M 3.txt  M 4.txt  M 5.txt  S 1.txt  S 2.json  S 2.txt  S 3.json  S 3.txt  S 4.txt  S 5.json  S 5.txt
PythonOptimizer/: main.ipynb  mathc.py  (+3 more)
(+41 files in other folders)
